# sam-rust

./: README.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
rust_app/: Cargo.toml
