[package]
name = "sam-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_runtime = "0.6.0"
serde = "1.0.136"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
futures = "0.3.24"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0.86"
rayon = "1.5.3"
reqwest = "0.11"